--- a/ioscheme.3
+++ b/ioscheme.3
@@ -23,6 +23,8 @@ PORT
 Port to listen on.
 .SH DESCRIPTION
 ioscheme listens on a port (udp or tcp) and evaluates a scheme function when data is received on the port.
+.SH EXAMPLE
+ioscheme -v -p8000 init.scm string.scm web.scm
 .SH "AUTHORS"
 Tinyscheme was written by Atsushi Moriwaki, Akira KIDA, R.C. Secrist, D. Souflis.
 Ioscheme by A. Carl Douglas (carl.douglas@gmail.com).
