simplify ioscheme command line example in man page

--- a/ioscheme.1
+++ b/ioscheme.1
@@ -61,7 +61,7 @@ as a basic HTTP server.
 .PP
 To run ioscheme:
 .IP
-ioscheme -v -p 8000 -e receive init.scm string.scm web.scm
+ioscheme -v -p 8000 -e receive init.scm test.scm
 .PP
 The scheme entry point function should look something like:
 .IP
